Remove the uninstall token
